# umeteum

./: CMakeLists.txt
include/umeteum/: client.hpp  component.hpp  exception.hpp
include/umeteum/models/: cloudiness.hpp  cloudness.hpp  condition.hpp  coords.hpp  current_weather.hpp  daypart_weather.hpp  dayparts_info.hpp  daytime.hpp  percentage.hpp  phenom_condition.hpp  precipitation_info.hpp  precipitation_strength.hpp  precipitation_type.hpp  pressure_info.hpp  season.hpp  temperature_range.hpp  timeline_info.hpp  timeline_weather.hpp  units.hpp  weather_condition.hpp  wind_direction.hpp  wind_info.hpp
src/: client.cpp  component.cpp
src/models/: cloudiness.cpp  condition.cpp  current_weather.cpp  daypart_weather.cpp  dayparts_info.cpp  daytime.cpp  percentage.cpp  phenom_condition.cpp  precipitation_info.cpp  pressure_info.cpp  season.cpp  temperature_range.cpp  timeline_info.cpp  timeline_weather.cpp  weather_condition.cpp  wind_info.cpp
unittests/models/: current_weather_test.cpp  daypart_weather_test.cpp  timeline_weather_test.cpp
